--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,8 @@
     height: 65px;
     border: 1px;
     border-radius: 35px;
-  }
+}
+.name-grn, .nav-btn {
+    color:#beee3a;
+    font: bold;
+}
