--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,22 @@ border: 0.05rem solid var(--defaultRed) !important;
     background: var(--defaultRed);
     color: var(--defaultWhite);
 }
+.total-expense-amount,
+.expense-title {
+color: var(--defaultRed);
+}
+.edit-icon {
+color: var(--defaultWhite);
+cursor: pointer;
+font-size: 1rem;  
+text-decoration: none !important;
+}
+.delete-icon {
+color: var(--defaultWhite);
+cursor: pointer;
+font-size: 1rem;  
+text-decoration: none !important;
+}
+.edit-icon:hover {
+color: var(--defaultWhite);
+}
