--- a/css/main.css
+++ b/css/main.css
@@ -102,3 +102,29 @@ text-decoration: none !important;
 .edit-icon:hover {
 color: var(--defaultWhite);
 }
+.delete-icon:hover {
+    color: var(--defaultWhite);
+}
+.showItem {
+display: block;
+}
+.info-title {
+font-size: 2rem;
+}
+.budget {
+font-size: 2rem;
+color: var(--defaultGreen);
+}
+.expense {
+font-size: 2rem; /*might be casuing bug*/
+color: var(--defaultRed);
+}
+.balance {
+font-size: 2rem;
+}
+.budget-icon,
+.expense-icon,
+.balance-icon {
+  font-size: 2.5rem;
+  color: var(--defaultBlue);
+}
