--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
     
 }
 .brian-img {
-    border-radius: 200px;
+
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -161,7 +161,13 @@ height: 2rem;
 }
 
 /*set media queries*/
+@media screen and (max-width: 992px) {
+    .brian-img {
+        display: none;
+    }
+}
 @media screen and (min-width: 992px) {
+
     .budget {
         font-size: 2.6rem;
         color: var(--defaultGreen);
