--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,19 @@ height: 2rem;
     .brian-img {
         display: none;
     }
+    .info-title {
+        font-size: 1.3rem;
+    }
+    .list-item,
+    .percentage {
+        font-size: .9rem;
+        width: auto;
+    }
+    .expense-icons {
+        display: inline-flex;
+        width: auto;
+        float: left;
+    }
 }
 @media screen and (min-width: 992px) {
 
