Add code use credit to John Smilga - Coding Addict

--- a/css/main.css
+++ b/css/main.css
@@ -218,3 +218,5 @@ height: 2rem;
       color: var(--defaultBlue);
     }
 }
+
+/* Use and Credit for code used in this project goes to Coding Addict [Coding Addict](https://www.youtube.com/codingaddict) - John Smilga */
